11712406-project2/test/test_11712406_8.spl
int func(int x, int y)
{
  if (x > y) {return 1;}
  else if (y > x) {return -1;}
  else {return 0;}
}

int main()
{
  int a = 5.8;
  int b = 9.2;
  return func(func(a, b), func(b, c));
}